# ros2_training_tutorial

./: README.md
autocar/: package.xml  setup.cfg  setup.py
autocar/autocar/: autonomous_exploring.py  avoid_obstacle.py  initial_pose.py  laser_data.py  trajectory.py
autocar_description/: CMakeLists.txt  package.xml
autocar_description/launch/: autocar_display.launch
autocar_description/rviz/: rviz_display_config.rviz
autocar_description/urdf/: autocar.xacro
demo1/: package.xml  setup.cfg  setup.py
demo1/demo1/: autonomous_exploring.py  avoid_obstacle.py  laser_data.py  path_planning.py
my_node/: CMakeLists.txt  package.xml
my_node/scripts/: turtle_move.py
