<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_node</name>
  <version>0.0.0</version>
  <description>My custom ROS node</description>
  <maintainer email="your_email@email.com">twm</maintainer>
  <license>TODO: License declaration</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <!--  Add your code below, if you have customize interface  -->



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
